# Tracker

./: .gitignore  CMakeLists.txt  Cargo.toml  README.md  Tracker.py  build.sh  config.json  example.py  install.ps1  install.sh  install_lib.sh  main.py  pyproject.toml  requirements.txt
c++/include/: config.hpp  entity.hpp  imgAlgsCpu.hpp  imgUtils.hpp  linkedList.hpp  mathUtils.hpp  nodes.hpp  opencvExtention.hpp  recognition.hpp  rect.hpp  tracker.hpp  vectorFuncs.hpp
c++/src/: config.cpp  cppWraper.cpp  entity.cpp  entityUtil.cpp  imgUtils.cpp  linkedList.cpp  mathUtils.cpp  opencvExtention.cpp  rect.cpp  tracker.cpp  vectorFuncs.cpp
python/: cpp_utils.py  recognizeBumpersTest.py
python/tracker/: __init__.py  general_tracker.py  tracker.pyi  visualizer.py
python_utils/: Tracker.py  cpp_utils.py  recognizeBumpersTest.py  tracker.py  tracker_utils.py
scripts/: install.ps1  install.sh  install_lib.ps1  install_lib.sh  load_data.py  traing_model.py
source/c++/include/:  boundingBox.hpp  boundingBox.hpp  config.hpp  entity.hpp  linkedList.hpp  mathUtils.hpp  recognition.hpp  rect.hpp  tracker.hpp  trajectory.hpp
source/c++/src/: boundingBox.cpp  config.cpp  cppWraper.cpp  entity.cpp  entityUtil.cpp  rect.cpp  tracker.cpp
source/python/: Tracker.py  c_utils.py  cpp_utils.py  tracker_utils.py
source/rust/: Cargo.toml
source/rust/src/: lib.rs
source/rust/src/BoundingBox/: mod.rs  rect.rs
source/rust/src/Recognition/: mod.rs  rect.rs
source/rust/src/rect/: mod.rs  point.rs
src/: bounding_box.rs  config.rs  constants.rs  dynamic_entity_tracker.rs  entity.rs  entity_state.rs  entity_utils.rs  general_tracker.rs  lib.rs  point.rs  rect.rs  static_entity_tracker.rs  tracker.rs  tracking.rs  trajectory.rs  utils.rs
src/c++/: drawing.cpp
src/python/: Tracker.py  general_tracker.py  tracker_utils.py  visualization.py  visualizer.py
testing/: CMakeLists.txt  test.cpp
