[package]
name = "tracker"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
extend = "1.2.0"
num = "0.4.3"
serde_json = "1.0.128"
ndarray = "0.16.1"
numpy = "0.21.0"
pyo3 = { version = "0.21.0", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 8
debug = false
incremental = true
overflow-checks = true
panic = "abort"
